finalized port to postgres; fixed narrow screen ui imageoverlay and z-index issues in the whole page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -87,14 +87,15 @@ body {
   position: sticky;
   bottom: calc(4vh - 30px*11/32);
   width: calc(100% - 8vh);
+  z-index: 3;
 }
 
 #language-select-shell {
   position: absolute;
   width: 30px;
   height: 30px;
-  z-index: 1;
   cursor: pointer;
+  z-index: 3;
 }
 
 p {
@@ -120,7 +121,6 @@ h1 {
   height: var(--nav-height);
   top: 0;
   background-color: var(--nav-secondary-color);
-  isolation: isolate;
   flex-flow: row nowrap;
   align-items: center;
   justify-content: center;
@@ -182,7 +182,7 @@ footer {
   height: 60px;
   margin-top: 20px;
   border-top: 1px solid var(--nav-color);
-  z-index: 2;
+  z-index: 1;
 }
 
 .text-footer {
@@ -598,16 +598,16 @@ ol {
   width: 100%;
   height: 100%;
   backdrop-filter: blur(3px);
-  z-index: 3;
+  z-index: 2;
 }
 
 #grid-imageoverlay {
   position: relative;
-  width: max-content;
+  width: 80vw;
   height: 80vh;
   display: grid;
   grid-template-columns: auto auto;
-  column-gap: 10px;
+  column-gap: 0px;
   margin: auto;
   justify-content: center;
   align-items: center;
@@ -618,8 +618,8 @@ ol {
 }
 
 #imageoverlay-image {
-  height: min(80vh, 60vw);
-  width: min(80vh, 60vw);
+  height: 80vh;
+  width: 40vw;
   justify-self: center;
   
   background-size: contain;
@@ -629,7 +629,7 @@ ol {
 }
 
 #imageoverlay-description {
-  width: 100%;
+  width: 40vw;
   height: fit-content;
 }
 
@@ -771,6 +771,7 @@ ol {
 
   #imageoverlay-description {
     margin: 0 1.5rem;
+    width: 80vw;
   }
 
 }
